--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 <header>
 	<div class="bgvideo">
-	<video src="video/-10480.mp4" type="video/mp4" autoplay muted loop></video>
+	<video src="Video/-10480.mp4" type="Video/mp4" autoplay muted loop></video>
 	<h1 class="textvideo">Сайт Івана</h1>
 </div>
 </header>
@@ -55,7 +55,7 @@
 <iframe id="iframe" width="880" height="495" src="https://www.youtube.com/embed/1VCQDoYop64" title="Державний Гімн України - National Anthem of Ukraine - Rock version by Nicky Rubchenko" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen class="f1" id="gm"></iframe>
 <iframe id="iframe2" src="https://uk.wikipedia.org/wiki/HTML" width="100%" height="500px" style="margin-top: 20px;" id="wiki"></iframe>
 <video id="video" controls width="100%" id="v1">
-	<source src="video/ocean_-_62249 (540p).mp4" type="video/mp4">
+	<source src="Video/ocean_-_62249 (540p).mp4" type="Video/mp4">
 </video>
 </main>
 <aside id="aside">
