--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 <a href="#" class="fa fa-snapchat-ghost"></a>
 <a href="#" class="fa fa-skype"></a>
 <a href="#" class="fa fa-rss"></a>
-<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2540.3331057776822!2d30.367149176369306!3d50.45352147159277!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4cc8f9f41696f%3A0x908cb1b922df527c!2z0JvRjNCy0ZbQstGB0YzQutCwINCy0YPQu9C40YbRjywgMjMsINCa0LjRl9CyLCAwMjAwMA!5e0!3m2!1suk!2sua!4v1699374843365!5m2!1suk!2sua" width="200" height="150" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="map"></iframe>
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d39717.296994710676!2d31.27091865!3d51.525487399999996!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46d5486f64e22f6d%3A0xd317c4d8f14a3f5f!2z0KLQoNCmICJIT0xMWVdPT0Qi!5e0!3m2!1suk!2sua!4v1699704380020!5m2!1suk!2sua" width="200" height="150" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="map"></iframe>
 </footer>
 </body>
 </html>
