--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<title>Мій сайт</title>
 	<link rel="stylesheet" type="text/css" href="css/site.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-	<link rel="icon" href="img/icons_74705.svg">
+	<link rel="icon" href="https://www.freeiconspng.com/uploads/website-icon-8.png">
 </head>
 <body>
 <header>
